--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: ["3.10"]  # Django 3.2 LTS supports up to 3.10
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.python-version }}
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -38,8 +43,10 @@ jobs:
       - name: Run Django tests (verbose)
         env:
           # Safe defaults for CI; override with real envs in a prod workflow if needed
+          DJANGO_SECRET_KEY: ci-secret
           DJANGO_DEBUG: "False"
           DJANGO_ALLOWED_HOSTS: "localhost,127.0.0.1"
           CORS_ALLOW_ALL_ORIGINS: "False"
         run: |
           python manage.py test -v 2
+
