--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Show Python version
+        run: python --version
+
       - name: Cache pip
         uses: actions/cache@v4
         with:
