--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,8 +27,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Show Python version
-        run: python --version
+      - name: Show Python version (should be 3.10)
+        run: | 
+          which python
+          python --version
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -41,6 +43,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # Safety: if the cache or a mis-push still leaves backports.zoneinfo around, remove it
+          pip uninstall -y backports.zoneinfo || true
           pip install -r requirements.txt
 
       - name: Run Django tests (verbose)
