--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,12 @@ jobs:
         run: | 
           which python
           python --version
+          python -c "import sys; print(sys.version)"
+
+      - name: Show requirements.txt head (prove file content)
+        run: |
+          echo "===== requirements.txt (first 80 lines) ====="
+          head -n 80 requirements.txt || true
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -41,6 +47,8 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
+        env:
+          PIP_DISABLE_PIP_VERSION_CHECK: "1"
         run: |
           python -m pip install --upgrade pip
           # Safety: if the cache or a mis-push still leaves backports.zoneinfo around, remove it
