--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10"]  # Django 3.2 LTS supports up to 3.10
+        python-version: ["3.11"]  # Using Python 3.11 (Django 4.2 LTS)
 
     steps:
       - name: Checkout repository
@@ -27,7 +27,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Show Python version (should be 3.10)
+      - name: Show Python version (should be 3.11)
         run: | 
           which python
           python --version
